# HPCAcademyFortran

./: .gitignore  Fortran.md  Makefile  README.md  fortran.xml  notes.md  pandoc-solarized.sty  practical.md  schedule.md
examples/: 01_hello_world.f90  02_hello_input.f90  03_basic_maths.f90  04_logical_operators.f90  05_if_statement.f90  06_integer_division.f90  07_infinite_do.f90  08_do_exit.f90  08_intrinsic_functions.f90  0x_allocate_stat.f90  0x_array_dummy_arguments.f90  0x_basic_function.f90  0x_basic_subroutine.f90  0x_block_demo.f90  0x_dummy_arguments.f90  0x_global_variables.f90  0x_integer_division.f90  0x_keyword_arguments.f90  0x_local_variables.f90  0x_parameters.f90  0x_select_case_character.f90  10_do_while_none.f90  10_logical_boolean_operations.f90  12_do_stride.f90  13_do_while.f90  15_do_counter.f90  17_do_negative_stride.f90  18_array_basics.f90  19_array_multidimensions.f90  20_array_indices.f90  22_array_conformability.f90  23_memory_order.f90  24_array_intrinsics.f90  25_allocate_stat.f90  26_parameters.f90  28_loss_of_precision.f90  29_basic_function.f90  30_basic_subroutine.f90  30a_intents.f90  31_local_variables.f90  (+45 more)
examples/50_module_example/: particle_properties.f90  physical_constants.f90
examples/module_example/: CMakeLists.txt  using_modules.f90
practicals/: exercise_01.md  exercise_02.md  exercise_03.md  exercise_04.md  practical_01.md  practical_02.md  practical_03.md  practical_04.md
practicals/solutions/exercise_01/: .gitignore  calculating_pi.f90  euler_integration.f90  factorial.f90  hello.f90  mean_and_std.f90  quadratics.f90  reversed_range.f90  sum_100.f90
practicals/solutions/exercise_03/: number_to_string.f90  times_table.f90
practicals/solutions/practical_02/: matrix_multiply.f90
