cmake_minimum_required(VERSION 3.12)

project(FortranExamples VERSION 0.1
  DESCRIPTION "Examples for HPC Academy"
  LANGUAGES Fortran)

macro(add_example example_name)
  add_executable(${example_name}
    ${example_name}.f90)
  target_compile_options(${example_name}
    PRIVATE -Wall -Wextra -std=f2008 -fcheck=all)
endmacro()

add_example(01_hello_world)
add_example(02_hello_input)
add_example(03_basic_maths)
add_example(04_logical_operators)
add_example(05_if_statement)
add_example(06_logical_boolean_operations)
add_example(07_infinite_do)
add_example(08_do_exit)
add_example(09_do_while)
add_example(10_do_while_none)
add_example(11_do_counter)
add_example(12_do_stride)
add_example(13_do_negative_stride)

add_example(0x_integer_division)
add_example(0x_memory_order)
add_example(0x_parameters)
add_example(0x_allocate_stat)
add_example(0x_basic_function)
add_example(0x_basic_subroutine)
add_example(0x_local_variables)
add_example(0x_global_variables)
add_example(0x_save_attribute)
add_example(0x_dummy_arguments)
add_example(0x_array_dummy_arguments)
add_example(0x_block_demo)

add_example(array_bounds)
add_example(array_basics)
add_example(array_constructors)
add_example(array_conformability)
add_example(array_multidimensions)
add_example(array_indices)
add_example(array_intrinsics)
add_example(loop_labels)
add_example(loss_of_precision)
add_example(intrinsic_functions)
add_example(bad_whitespace)
add_example(good_whitespace)
add_example(format_string)
add_example(repeating_format_string)
add_example(format_more_records)
add_example(open_and_read_file)
add_example(basic_namelist)
add_example(parameter_and_allocatable_characters)
add_example(elemental_functions)
add_example(reshape_order)
add_example(optional_arguments)
add_example(write_to_character)
add_example(passing_procedure)
add_example(allocatable_function)
add_example(select_case_bounds)
add_example(0x_select_case_character)
add_example(where_nonzero)
add_example(cycle_loop)
add_example(cycle_with_label)
