cmake_minimum_required(VERSION 3.12)

project(FortranExamples VERSION 0.1
  DESCRIPTION "Examples for HPC Academy"
  LANGUAGES Fortran)

macro(add_example example_name)
  add_executable(${example_name}
    ${example_name}.f90)
  target_compile_options(${example_name}
    PRIVATE -Wall -Wextra -std=f2018 -fcheck=all)
endmacro()

add_example(01_hello_world)
add_example(02_hello_input)
add_example(03_bad_whitespace)
add_example(04_good_whitespace)
add_example(05_basic_maths)
add_example(06_integer_division)
add_example(07_logical_operators)
add_example(08_intrinsic_functions)
add_example(09_if_statement)
add_example(10_logical_boolean_operations)
add_example(11_infinite_do)
add_example(12_do_exit)
add_example(13_do_while)
add_example(14_do_while_none)
add_example(15_do_counter)
add_example(16_do_stride)
add_example(17_do_negative_stride)
add_example(18_array_basics)
add_example(19_array_multidimensions)
add_example(20_array_indices)
add_example(21_array_constructors)
add_example(22_array_conformability)
add_example(23_memory_order)
add_example(24_array_intrinsics)
add_example(25_allocate_stat)
add_example(26_parameters)
add_example(27_parameter_and_allocatable_characters)
add_example(28_loss_of_precision)
add_example(29_basic_function)
add_example(30_basic_subroutine)
add_example(31_local_variables)
add_example(32_global_variables)
add_example(33_save_attribute)
add_example(34_dummy_arguments)
add_example(34_keyword_arguments)
add_example(35_array_dummy_arguments)
add_example(35a_recursive_functions)
add_example(36_elemental_functions)
add_example(37_allocatable_function)
add_example(38_select_case_bounds)
add_example(39_select_case_character)
add_example(40_where_nonzero)
add_example(41_loop_labels)
add_example(42_cycle_loop)
add_example(43_cycle_with_label)
add_example(44_format_string)
add_example(45_repeating_format_string)
add_example(46_format_more_records)
add_example(47_open_and_read_file)
add_example(48_basic_namelist)
add_example(49_write_to_character)
add_subdirectory(50_module_example)
add_example(51_basic_types)
add_example(52_type_array)
add_example(53_type_inheritance)
add_example(54_type_bound_procedure)
add_example(55_type_override)
add_example(56_type_private)

add_executable(58_external_function
  58_external_function.f90
  57_idouble.f90)
target_compile_options(58_external_function
  PRIVATE -Wall -Wextra -std=f2008 -fcheck=all)

add_executable(59_external_function_with_interface
  59_external_function_with_interface.f90
  57_idouble.f90)
target_compile_options(59_external_function_with_interface
  PRIVATE -Wall -Wextra -std=f2008 -fcheck=all)

add_example(60_passing_procedure)
add_example(61_generic_interface)
add_example(62_optional_arguments)
add_example(63_block_demo)
